src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Money_Works_in_Current_Budget__c</fullName>
        <label>Money for Works in Current Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Money_Works_in_Future_Plan__c</fullName>
        <label>Money for Works in Future Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_in_Wish_Date__c</fullName>
        <description>Look-up to Move in Wish Date field stored on associated Opportunity record</description>
        <formula>Opportunity__r.Move_in_Wish_Date__c</formula>
        <inlineHelpText>Look-up to Move in Wish Date field stored on associated Opportunity record</inlineHelpText>
        <label>Move in Wish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Phones__c</fullName>
        <label>Number of phones taken</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_line_Edits__c</fullName>
        <description>Specifies which offline changes are made under quote documents</description>
        <inlineHelpText>Specifies which offline changes are made under quote documents</inlineHelpText>
        <label>Off-line Edits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient information</fullName>
                </value>
                <value>
                    <fullName>Queries raised with Sales Surveyor</fullName>
                </value>
                <value>
                    <fullName>Asked by Sales Surveyor to put on hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceExtraLarge__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceLarge__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceMedium__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceSelectExtraLarge__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Select Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpenMeetingSpaceExtraLarge__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceSelectLarge__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Select Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpenMeetingSpaceLarge__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceSelectMedium__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Select Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpenMeetingSpaceMedium__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceSelectSmallArea__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Select Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpenMeetingSpaceSmallArea__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space_Selection</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenMeetingSpaceSmallArea__c</fullName>
        <inlineHelpText>Does customer need open meeting space for working together and informal chats? (tick all that apply)</inlineHelpText>
        <label>Open Meeting Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Open_Close_Meeting_Space</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherPrivacyOptions__c</fullName>
        <label>Other Privacy Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRequirements__c</fullName>
        <inlineHelpText>If you don&apos;t find appropriate options in previous fields</inlineHelpText>
        <label>Other Requirements?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWallsAndDoorsOptions__c</fullName>
        <label>Other Walls&amp;Doors Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsourced_Date__c</fullName>
        <label>Outsourced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outsourced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when an external solicitor is being used for contract negotiations</description>
        <inlineHelpText>Checked when an external solicitor is being used for contract negotiations</inlineHelpText>
        <label>Outsourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Storage__c</fullName>
        <label>Personal Storage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lockers</fullName>
                </value>
                <value>
                    <fullName>Pedestals</fullName>
                </value>
                <value>
                    <fullName>Shelving</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>Property__r.Portfolio__c</formula>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Data_or_AV_Requirements_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Data_or_AV_Requirements__c</fullName>
        <inlineHelpText>We will provide one power outlet, two data outlets and suitably sized comms cabinet unless otherwise stated</inlineHelpText>
        <label>Power, Data or AV Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practical_Completion_Date_Forecast__c</fullName>
        <label>Practical Completion Date (Forecast)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Emption_Agreement__c</fullName>
        <formula>TEXT(Pre_Emption_Inventory__r.Pre_emption_Agreement_Status__c)</formula>
        <label>Pre-Emption Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Emption_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Emption Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Cases (Pre-Emption Inventory)</relationshipLabel>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privacy__c</fullName>
        <inlineHelpText>Is Privacy important in these spaces?</inlineHelpText>
        <label>Privacy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unimportant</fullName>
                </value>
                <value>
                    <fullName>Essential</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other:</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Documentation__c</fullName>
        <label>Project Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <label>Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Contact_Details_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Contact Details Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_date_of_surrender__c</fullName>
        <label>Proposed date of surrender</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Accepted_by_Client__c</fullName>
        <label>Quote Accepted by Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReasonForLoss__c</fullName>
        <label>Reason for Loss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Used for list view filtering</description>
        <formula>Text(Inventory__r.Property__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for list view filtering</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removed Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Assignment_Time__c</fullName>
        <label>SLA Assignment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Sales Contact)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_on_Quote__c</fullName>
        <description>System fields for populate email from SBQQ__SalesRep__c field on SBQQ__Quote__c object.
            Uses for email alert &apos;FitOut cost is completed&apos;.</description>
        <label>Sales Rep on Quote</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_on_Site_Date_Forecast__c</fullName>
        <label>Start on Site Date (Forecast)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusOnTaskForBankingConsent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>System field which is used to define a closed task &apos;Banking Consen&apos; or not.</description>
        <label>Status on Task for Banking Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusOnTaskForLandlordConsent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>System field which is used to define a closed task &apos;Head Landlord Consent&apos; or not.</description>
        <label>Status on Task for Landlord Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_1_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Storage 1 Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Cases (Storage 1 Inventory)</relationshipLabel>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_2_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Storage 2 Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Cases (Storage 2 Inventory)</relationshipLabel>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_3_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Storage 3 Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Cases (Storage 3 Inventory)</relationshipLabel>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suite_Pre_Emption_Agreement_Status__c</fullName>
        <formula>TEXT(Inventory__r.Pre_emption_Agreement_Status__c)</formula>
        <label>Suite Pre-Emption Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite_Restoration__c</fullName>
        <label>Suite Restoration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surrender_Premium__c</fullName>
        <label>Surrender Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Move_In_Date__c</fullName>
        <label>Target move in date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terminal_Dilapidations__c</fullName>
        <label>Terminal Dilapidations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contractor_Instruction_Amount__c</fullName>
        <label>Total Contractor Instruction Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche_Sign_Off__c</fullName>
        <label>Tranche Sign Off?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Department__c</fullName>
        <formula>Internal_User__r.Department</formula>
        <label>User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Division__c</fullName>
        <formula>Internal_User__r.Division</formula>
        <label>User Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WallsAndDoors__c</fullName>
        <inlineHelpText>Customers thoughts on Walls and Doors</inlineHelpText>
        <label>Walls &amp; Doors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully glazed</fullName>
                </value>
                <value>
                    <fullName>Solid walls and doors</fullName>
                </value>
                <value>
                    <fullName>A mixture of both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other:</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcoming_Guests_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcoming_Guests__c</fullName>
        <label>Welcoming Guests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unattended Waiting</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Works_Request_Type__c</fullName>
        <label>Works Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCMP (2025)</fullName>
                </value>
                <value>
                    <fullName>CAT A (6070)</fullName>
                </value>
                <value>
                    <fullName>CAT B (6050)</fullName>
                </value>
                <value>
                    <fullName>Capital (4100)</fullName>
                </value>
                <value>
                    <fullName>Service Space Capital (1040)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AP_Projects</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Quote_Accepted_by_Client__c</columns>
        <columns>Current_Signed_off_Total__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>Property__c</columns>
        <columns>Expense_Code__c</columns>
        <columns>Works_Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Project_Works_Request_Case</value>
        </filters>
        <filters>
            <field>Delivery_Function__c</field>
            <operation>equals</operation>
            <value>AP Construction</value>
        </filters>
        <label>AP Construction</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Works_Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>B_C_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>B&amp;C Queue</label>
        <queue>B_C_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Surrenders</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Inventory__c</columns>
        <columns>Property__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Contract_Surrender_Conventional</value>
        </filters>
        <label>Contract Surrenders</label>
    </listViews>
    <listViews>
        <fullName>Conventional_Onboarding</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Inventory__c</columns>
        <columns>Inventory_Size_Sq_Ft__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Conventional_Onboarding</value>
        </filters>
        <label>Conventional Onboarding</label>
    </listViews>
    <listViews>
        <fullName>Design_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Design Team</label>
        <queue>Design_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fit_Out_Design</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Fit_Out_Design</value>
        </filters>
        <label>Fit Out Design</label>
    </listViews>
    <listViews>
        <fullName>Lease_Transaction_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Inventory__c</columns>
        <columns>Contract__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Lease Transaction</label>
        <queue>Lease_Transaction</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Lease_Transaction_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Property__c</columns>
        <columns>Inventory__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Lease_Transaction,Case.Outsourced_Lease_Transaction</value>
        </filters>
        <label>Open Lease Transaction Cases</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Professional_Services_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Internal_User__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Professional_Services</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Professional Services Cases</label>
    </listViews>
    <listViews>
        <fullName>Open_Salesforce_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Internal_User__c</columns>
        <columns>User_Department__c</columns>
        <columns>User_Division__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Jira_Ticket__c</columns>
        <columns>Scheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Salesforce_Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>tshanks</value>
        </filters>
        <label>Open Connect Support Cases</label>
    </listViews>
    <listViews>
        <fullName>Professional_Services_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Professional Services</label>
        <queue>Professional_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Project_Works_Request</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Project_Title__c</columns>
        <columns>Inventory__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Project_Works_Request_Case</value>
        </filters>
        <label>Project Works Request</label>
    </listViews>
    <recordTypes>
        <fullName>Building_Construction_Case</fullName>
        <active>true</active>
        <businessProcess>Building %26 Construction Case</businessProcess>
        <label>Building &amp; Construction Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case</fullName>
        <active>true</active>
        <businessProcess>Ordinary Case</businessProcess>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Surrender_Conventional</fullName>
        <active>true</active>
        <businessProcess>Ordinary Case</businessProcess>
        <label>Contract Surrender Conventional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Surrender_Serviced</fullName>
        <active>true</active>
        <businessProcess>Ordinary Case</businessProcess>
        <label>Contract Surrender Serviced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conventional_Onboarding</fullName>
        <active>true</active>
        <businessProcess>Ordinary Case</businessProcess>
        <label>Conventional Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Design</fullName>
        <active>true</active>
        <businessProcess>Design Case</businessProcess>
        <label>Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fit_Out_Design</fullName>
        <active>true</active>
        <businessProcess>Fit Out Design Case</businessProcess>
        <label>Fit Out Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lease_Transaction</fullName>
        <active>true</active>
        <businessProcess>SLA Process</businessProcess>
        <label>Lease Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outsourced_Lease_Transaction</fullName>
        <active>true</active>
        <businessProcess>SLA Process</businessProcess>
        <description>Used when an external solicitor is being used for contract negotiations</description>
        <label>Outsourced Lease Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional_Services</fullName>
        <active>true</active>
        <businessProcess>Professional Services</businessProcess>
        <label>Professional Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Works_Request_Case</fullName>
        <active>true</active>
        <businessProcess>Project Works Request Case</businessProcess>
        <label>Project Works Request Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Management</fullName>
        <active>true</active>
        <businessProcess>Ordinary Case</businessProcess>
        <label>Property Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Case</fullName>
        <active>true</active>
        <businessProcess>Inventory was removed from a Quote</businessProcess>
        <label>Quote Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Support</fullName>
        <active>true</active>
        <businessProcess>Salesforce Support</businessProcess>
        <label>Connect Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Serviced_Space_Onboarding</fullName>
        <active>true</active>
        <businessProcess>Serviced Space Onboarding</businessProcess>
        <label>Serviced Space Onboarding</label>
    </recordTypes>
</CustomObject>